<resources>
    <string name="app_name">ReadApp</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">书架</string>
    <string name="title_notifications">我的</string>
    <string name="tv_visitor">游客进入</string>
    <string name="tv_register">新用户注册</string>
    <string name="bt_login">登录</string>
    <string name="et_password">密码</string>
    <string name="et_account">账号</string>
    <string name="tv_appname">电子小说阅读</string>
    <string name="cb_rem">记住密码</string>
    <string name="tv_forget">忘记密码</string>
</resources>
